# mpiSBARS

./: .gitignore  Makefile  Makefile.save  Makefile.skel  README.md  autogen.sh  config.mk  configure.ac  homo
include/: analyze.h  arrayMPI.h  arrayMPI.tcc  compare.h  compare_gpu.h  dataMPI.h  dataMPI.tcc  decompose.h  decomposition.h  decomposition_gpu.h  gpu_computing.h  image.h  list_repeats.h  matrixMPI.h  matrixMPI.tcc  matrix_analysis.h  matrix_gomology.h  myMPI.h  options.h  profiling.h  sequence.h  set_repeats.h  support.h  types.h
man/: mpisbars.1
project/: template  template.cpp  template.h  vim_file  vim_file_algorithm  vim_file_all  vim_file_cuda  vim_file_data
src/: Makefile.am  analyze.cpp  analyze.cu  analyze.h  arrayMPI.h  arrayMPI.tcc  compare.cpp  compare.h  compare_gpu.cu  dataMPI.h  dataMPI.tcc  decompose.cpp  decompose.h  decomposition.cpp  decomposition.h  decomposition_gpu.cu  gpu_computing.cpp  gpu_computing.cu  gpu_computing.h  gpu_computing_cap.cpp  gpu_computing_compare.cu  gpu_computing_compare2.cu  gpu_computing_decompose.cu  image.cpp  image.h  list_repeats.cpp  list_repeats.h  main.cpp  main2.cpp  matrixMPI.h  matrixMPI.tcc  matrix_analysis.cpp  matrix_gomology.cpp  matrix_gomology.h  myMPI.cpp  myMPI.h  myMPI_cap.cpp  options.cpp  options.h  profile.cpp  (+11 more)
test/: MPIRUN  arguments  block_size  exp_rat_mus  experiment  mpiXgpu  opt  opt.cpp  run  scalability  solid_vs_block  verify
test/input/: file50K
test/old/: big
test/output/: .anafile50K  .anafile5M
test/samples/: do_ATGC.cpp  file100K  file148  file200K  file74K
